fixed button error on ios

--- a/style.scss
+++ b/style.scss
@@ -60,6 +60,10 @@ body {
     font-size: 2.2rem;
     cursor: pointer;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     position: fixed;
     bottom: 1em;
     right: 1em;
